Fix z-index of navigation menu

--- a/components/navigation_menu.module.css
+++ b/components/navigation_menu.module.css
@@ -4,6 +4,7 @@
   top: 50%;
   transform: translateY(-50%);
   right: 1.5rem;
+  z-index: 10000000;
 }
 
 .navigation-menu > ul {
